# vibe

./: .deepsource.toml  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMIT_FORMAT.MD  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  SECURITY.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  code-quality.md
.github/workflows/: cmake-single-platform.yml
examples/callbacks/: main.cpp
examples/data-template/: data.html  main.cpp
examples/file-template/: index.html  main.cpp  one.html  two.html
examples/files/: cpp.html  main.cpp  test.json
examples/headers/: main.cpp
examples/hello-world/: main.cpp
examples/middlewares/: main.cpp
examples/parameters-methods/: main.cpp
examples/route-cooling/: main.cpp
examples/router/: middlewares.cpp  separation.cpp  server
examples/simple-json/: main.cpp
examples/types-routes/: main.cpp
include/vibe/: main_process.h  routes.hpp  sockets.h  vibe.h
include/vibe/request/: io.h  request.hpp  router_epoll.h
include/vibe/threading/: thread_pool.h
include/vibe/util/: basic_render.h  cpp_reader.h  data_render.h  enums.h  json.hpp  local_utility.h  mg_reader.h  notify.h  nterminal.h  parameter_proccess.h  parameters.hpp  request.hpp  sysprocess.h  wInstances.h  worker_core.h
sources/: parameter_proccess.cpp  parameters.cpp  request.cpp  routes.cpp  sockets.cpp  sysprocess.cpp
sources/request/: io.cpp  parameters.cpp  request.cpp  routes.cpp
sources/threading/: thread_pool.cpp
tests/: debug.cpp  main_test.cpp  suite.h
tests/utils/: min.veridic.h
